# DynamicTyping

./: CMakeLists.txt
doc/: Doxyfile
include/: dyntypes.h
src/: bool.c  debug.h  error.c  error.h  float.c  init.c  int.c  list.c  mem.c  mem.h  method.c  murmurhash.h  nil.c  str.c  value.c  value.h  vector.c  vector.h
test/: basic_use.c  cpp_compatible.cc
